--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@ span{
             <nav class="navigation">
                 
                 <a href="about.html">About</a>
-                <a href="weather.html">Weather</a>
-                <a href="maps/map.html">Map</a>
+                <a href="Weather.html">Weather</a>
+                <a href="map.html">Map</a>
                 <a href="Contact.html">Contact</a>
                 
                 <!-- <button class="btnlogin-popup">Login</button> -->
